<resources>
    <string name="app_name">Medion</string>
    <string name="Signup_title">Sign Up</string>
    <string name="Signup_email">Email</string>
    <string name="Signup_name">Name</string>
    <string name="Signup_password">Password</string>
    <string name="Signup_reenterpassword">Re-Enter Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Signup_phonenumber">Phone Number</string>

    <string name="app_logo">This is app Logo.</string>
    <string name="profile_logo">This is profile pic for the group.</string>
    <string name ="time_image">This is the image for selecting time.</string>
    <string name="date_image">This is the image of selecting date.</string>
    <string name="select_members">This is the image of selecting members while creating a new group</string>
    <string name="pick_place">This is the image for picking place.</string>
    <string name="cancel_event">This is the image for cancelling an event by admin.</string>
    <string name ="view_members">This is the image for viewing current members in a group.</string>
    <string name="finalize_event_admin">Image for view event by admin when he wants to finalize an event!</string>
    <string name="view_places">Image for admin/member to view selected place after finalizing the event.</string>
    <string name="member_cancel">Image for member to cancel his registration for an event.</string>
    <string name="admin_add_members">Image for admin to add more members to an existing group.</string>
    <string name="hint_signup_name"><font size="15">Enter a valid name with length more than 6</font></string>
    <string name="hint_signup_email"><font size="15">Enter a valid Email</font></string>
    <string name="hint_signup_phone"><font size="15">Enter a valid phone number without country extensions.</font></string>
    <string name="hint_signup_password"><font size="15">Enter a valid password with length more than 6</font></string>
    <string name="hint_signup_repassword"><font size="15">Re-enter the password.</font></string>
    <string name="label_trackgps">Track gps service</string>
    <string name="dbexception1">No records found!</string>
    <string name="splitexception">Error parsing information.</string>
    <string name="layoutexception">Unable to resolve layout.</string>
    <string name="eventName">Event Name</string>
    <string name="eventSave">Save</string>
    <string name="eventDetails">Event Details</string>
    <string name="extraOptions">Extra Options</string>
    <string name="eventPlaceName">Place Name: </string>
    <string name="home">Home</string>
    <string name="hint_main_phonenumber">Enter your phone number</string>
    <string name="hint_main_password">Enter your password</string>
    <string name="textview_id">ID: </string>
    <string name="place_placeopen">Place open? : </string>
    <string name="main_rememberme">Remember Me</string>
    <string name="hint_eventName">provide a valid Event Name</string>
    <string name="name">Name: </string>
    <string name="Newuser">New User? </string>
    <string name="latlongs">Place Latlongs:</string>
    <string name="auth">Authority: </string>
    <string name="login">Login</string>
    <string name="place_ratings">Place Rating: </string>
    <string name="date">Date: </string>
    <string name="time">Time: </string>
    <string name="showonmap">show on map</string>
    <string name="location">Location: </string>
    <string name="register">Register</string>
    <string name="placeupdate">Pick place to get location updated.</string>


</resources>
