<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.starters.medion.SignUp"
    android:background="@drawable/gradient_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Signup_title"
        android:id="@+id/Signup_title"
        android:layout_centerHorizontal="true"
        android:fontFamily="verdana"
        android:textColor="#292b2d"
        android:textStyle="bold" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Signup_edit_name"
        android:hint="@string/hint_signup_name"
        android:layout_below="@+id/Signup_title"
        android:fontFamily="verdana"
        android:textColor="#292b2d"
        android:layout_marginTop="15dp"
        android:textStyle="bold"

        android:width="20dp"
        />





    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Signup_edit_email"
        android:hint="@string/hint_signup_email"
        android:layout_below="@+id/Signup_edit_name"
        android:fontFamily="verdana"
        android:layout_marginTop="15dp"
        android:textColor="#292b2d"
        android:textStyle="bold"

        android:width="20dp"
        android:inputType="textEmailAddress" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Signup_edit_phonenumber"
        android:hint="@string/hint_signup_phone"
        android:layout_below="@+id/Signup_edit_email"
        android:fontFamily="verdana"
        android:layout_marginTop="15dp"

        android:textColor="#292b2d"
        android:textStyle="bold"

        android:width="20dp"
        android:inputType="number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_signup_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Signup_edit_password"
        android:layout_below="@+id/Signup_edit_phonenumber"
        android:fontFamily="verdana"
        android:textColor="#292b2d"
        android:textStyle="bold"

        android:width="20dp"
        android:inputType="textPassword" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:hint="@string/hint_signup_repassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/Signup_edit_reenterpassword"
        android:layout_below="@+id/Signup_edit_password"
        android:fontFamily="verdana"
        android:textColor="#292b2d"
        android:textStyle="bold"

        android:width="20dp"
        android:inputType="textPassword" />




    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/register"
        android:id="@+id/Signup_register"
        android:layout_below="@+id/Signup_edit_reenterpassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:textSize="12sp"
        android:fontFamily="sans-serif-medium"
        android:textAlignment="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:background="#292b2d"
        android:textColor="#e8493e" />

    <com.gc.materialdesign.views.ProgressBarCircularIndeterminate
        android:id="@+id/progressBarsignup"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="#292b2d"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/Signup_register"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>



</RelativeLayout>